--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -23,11 +23,11 @@
 	background-color: pink;
 */
 p#triangle {
-	border-color: yellow blue red green;	/*top right bottom left*/
+	border-color: cadetblue springgreen purple deeppink;	/*top right bottom left*/
 	border-style: solid;
-	border-width: 1em 2em 3em 4em;	/*top right bottom left*/
-	height: 6em;
-	width: 6em;
+	border-width: 2em 3em 4em 5em;	/*top right bottom left*/
+	height: 7em;
+	width: 7em;
 }
 .balle {
 	display: inline-block;
@@ -56,9 +56,5 @@ p#triangle {
 		<volume class='maison'><p>gauche</p><p>droite</p><p>devant de la maison</p><p>derrière</p><p>bas</p><p>gauche</p><p>droite</p><p>devant</p><p>derrière</p></volume>
 		<volume class='pave'><p>gauche</p><p>droite</p><p>devant du pave</p><p>derrière</p><p>bas</p><p>haut</p></volume>
 	</cadre>
-	<div class='cylindre-droit'><p>cylindre</p><p>droit</p></div>
-	<div class='cylindre-droit couche'><p>cylindre</p><p>couché</p></div>
-	<p class='balle'></p>
-	<p id='triangle'></p>
 </body></html>
 
