--- a/model-css/page-anim.html
+++ b/model-css/page-anim.html
@@ -13,6 +13,11 @@
 		0% { background-color: red; }
 		50% { background-color: pink; }
 	}
+	.boule {
+		background-color: var(--button-bg);
+		width: 6em;
+		height: 6em;
+	}
 </style><section>
 	<h2>les animations</h2>
 	<p class='shape heart' id='moving-heart'></p>
@@ -27,4 +32,6 @@
 	<h3>bonus</h3>
 	<p>animation-delay: 1s;</p>
 	<p>animated:hover { animation-play-state: paused; } running</p>
+	<h3>la boule</h3>
+	<p class='boule horizontal'></p>
 </section>
