--- a/model-css/page-bord.html
+++ b/model-css/page-bord.html
@@ -3,6 +3,20 @@
 		height: 6em;
 		margin-bottom: 1em;
 	}
+	section.bord p.triangle {
+		border-color: cadetblue #3C3 purple var(--button-bg);
+		border-style: solid;
+		border-width: 2em 3em 4em 5em;
+		height: 7em;
+		width: 7em;
+	}
+	p.triangle#symetrie {
+		border-width: 2em 4em;
+	}
+	section.bord p.info {
+		height: 2em;
+		border-style: none;
+	}
 </style><section class='bord list3'>
 	<h2>les bordures</h2>
 	<p></p>
@@ -17,4 +31,6 @@
 	<p style='border-style:double'>border-style: double;</p>
 	<p style='border-radius:4px'>border-radius: 4px;</p>
 	<p style='border-radius:50%'>border-radius: 50%;</p>
+	<p class='triangle'></p><p class='info'>triangle. cotés: top, right, bottom, left</p>
+	<p class='triangle' id='symetrie'></p><p class='info'>triangle. cotés: top, right</p>
 </section>
