--- a/sudoku.html
+++ b/sudoku.html
@@ -72,9 +72,8 @@
 	}}
 	function remplirLigne5689 (x){
 		tableau[x] =[];
-		console.log (5689);
+		console.log (5689, x);
 		var n, nombresTmp =[];
-		console.log (x);
 		for (var y=0; y<9; y=y+3){
 			nombres = [1,2,3,4,5,6,7,8,9];
 			nombres.delTriplet (x,y);
