--- a/exemples/sudoku-simple.html
+++ b/exemples/sudoku-simple.html
@@ -28,15 +28,6 @@
 	p:nth-child(9n-8) { border-left-width: 6px; }
 	p:nth-child(-n+9) { border-top-width: 6px; }
 	p:nth-child(27n-8), p:nth-child(27n-7), p:nth-child(27n-6), p:nth-child(27n-5), p:nth-child(27n-4), p:nth-child(27n-3), p:nth-child(27n-2), p:nth-child(27n-1), p:nth-child(27n) { border-bottom-width: 6px; }
-	p.case-1 { background-color: red; }
-	p.case-2 { background-color: green; }
-	p.case-3 { background-color: blue; }
-	p.case-4 { background-color: maroon; }
-	p.case-5 { background-color: lime; }
-	p.case-6 { background-color: deeppink; }
-	p.case-7 { background-color: red; }
-	p.case-8 { background-color: red; }
-	p.case-9 { background-color: red; }
 </style></head><body>
 	<h1>grille de sudoku</h1>
 	<section>
@@ -51,13 +42,13 @@
 		var cases = document.getElementsByTagName('p');
 		z=0;
 		for (var x=0; x<9; x++) for (var y=0; y<9; y++){
-			cases[z].classeName = 'case-' + tableau[x][y];
+			cases[z].innerHTML = tableau[x][y];
 			z=z+1;
 		}
 		nombres = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80];
 		for (var z=0; z<31; z++){
 			x= nombres.enleverAleatoirement();
-			cases[z].classeName ="";
+			cases[x].innerHTML =" ";
 		}
 	}
 	Array.prototype.enleverAleatoirement = function() {
