--- a/model-css/page-anim.html
+++ b/model-css/page-anim.html
@@ -33,5 +33,5 @@
 	<p>animation-delay: 1s;</p>
 	<p>animated:hover { animation-play-state: paused; } running</p>
 	<h3>la boule</h3>
-	<p class='boule horizontal'></p>
+	<p class='boule tourne'></p>
 </section>
