--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -3,9 +3,10 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
 	<base href=''>
-	<link rel='icon' type='image/svg+xml' href='C:\Users\deborah.powers\site-dp\data\nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='C:\Users\deborah.powers\site-dp\library-css\structure.css'/>
-	<link rel='stylesheet' type='text/css' href='C:\Users\deborah.powers\site-dp\library-css\perso.css' media='screen'/>
+	<link rel='icon' type='image/svg+xml' href='/var/www/html/site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/shapesa.css'/>
 	<link rel='stylesheet' type='text/css' href='cube.css'/>
 <style type='text/css'>
 	body { padding-bottom: 30em; }
@@ -23,6 +24,9 @@
 	background-color: pink;
 */
 </style></head><body>
+	<cadre>
+		<volume class='cylindre va spin-xy'><p>haut</p><p>bas</p><p></p><p></p></volume>
+	</cadre>
 	<cadre>
 		<volume class='cone'><p>base</p><p></p><p></p><p></p></volume>
 	</cadre>
