--- a/model-css/page-shape.html
+++ b/model-css/page-shape.html
@@ -1,17 +1,4 @@
 <style type='text/css'>
-	.boule {
-		background-color: var(--button-bg);
-		width: 6em;
-		height: 6em;
-	}
-	.cylindre {
-		background: linear-gradient(90deg, var(--fond-color), white, var(--fond-color));
-		width: 10em;
-		height: 10em;
-	}
-	.cylindre >* { background-color: var(--fond-color); }
-	.cylindre >*:nth-child(1) { background-color: var(--button-bg); }
-	.cylindre.couche { 	background: linear-gradient(0deg, var(--fond-color), white, var(--fond-color)); }
 </style><section class='list3'>
 	<h2>les formes</h2>
 	<div><p>.shape .heart</p><p class='shape heart'></p></div>
@@ -22,5 +9,5 @@
 	<div><p>.outline .cross</p><p class='outline cross'></p></div>
 	<div><p>.boule</p><p class='boule'></p></div>
 	<div><p>.cylindre</p><div class='cylindre'><p></p><p></p></div></div>
-	<div><p>.cylindre.couche</p><div class='cylindre couche'><p></p><p></p></div></div>
+	<div><p>.cylindre.horizontal</p><div class='cylindre horizontal'><p></p><p></p></div></div>
 </section>
