--- a/model-css/page-shape.html
+++ b/model-css/page-shape.html
@@ -8,6 +8,7 @@
 	<div><p>.outline .arrow .right</p><p class='outline arrow right'></p></div>
 	<div><p>.outline .cross</p><p class='outline cross'></p></div>
 	<div><p>.boule</p><p class='boule'></p></div>
-	<div><p>.cylindre</p><div class='cylindre'><p></p><p></p></div></div>
-	<div><p>.cylindre.horizontal</p><div class='cylindre horizontal'><p></p><p></p></div></div>
+	<div><p>cylindre</p><cylindre><p></p><p></p></cylindre></div>
+	<div><p>cylindre.horizontal</p><cylindre class='horizontal'><p></p><p></p></cylindre></div>
+	<div><p>cylindre.tourne</p><cylindre class='tourne'><p></p><p></p></cylindre></div>
 </section>
