--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -2,11 +2,10 @@
 	<title>cube en css</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<base href=''>
-	<link rel='icon' type='image/svg+xml' href='/var/www/html/site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/shapesa.css'/>
+	<link rel='icon' type='image/svg+xml' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='cube.css'/>
 <style type='text/css'>
 	body { padding-bottom: 30em; }
