--- a/model-css/index.html
+++ b/model-css/index.html
@@ -32,7 +32,7 @@
 			<a ui-sref='anim()'>les animations</a>
 		</section>
 	</header>
-	<main><ui-view></ui-view></main>
+	<main><ui-view><p>allumage</p></ui-view></main>
 	<footer>
 		<p>pied de page</p>
 		<a href='#summary'>revenir au sommaire</a>
