--- a/calendrier.html
+++ b/calendrier.html
@@ -10,11 +10,10 @@
 	<script type='text/javascript' src='../html/calendrier va.js'></script>
 <style type='text/css'>
 </style></head><body>
-	<calendar class='month'>
+	<calendar>
 		<span></span><span></span>
 		<p>l</p><p>m</p><p>m</p><p>j</p><p>v</p><p>s</p><p>d</p>
 	</calendar>
-	<calendar class='day'><span></span><button onClick='closeDay(this)'>X</button></calendar>
 </body>
 <script type='text/javascript'>
 const eventList =[[ '01/02', 'coucou' ], [ '01/05', 'bonjour mon lapin' ], [ '01/05', 'bonsoir mon canard' ]];
