--- a/calendrier.html
+++ b/calendrier.html
@@ -2,12 +2,12 @@
 	<title>calendrier</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/list.js'></script>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/text.js'></script>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/file.js'></script>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/tag.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/list.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/text.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/file.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/tag.js'></script>
 	<script type='text/javascript' src='calendar.js'></script>
-	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
 <style type='text/css'>
 	calendar {
 		display: grid;
