--- a/calendrier.html
+++ b/calendrier.html
@@ -8,29 +8,14 @@
 	<script type='text/javascript' src='../site-dp/library-js/tag.js'></script>
 	<script type='text/javascript' src='calendar.js'></script>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css'/>
+	<link rel='stylesheet' type='text/css' href='calendar.css'/>
 <style type='text/css'>
-	calendar {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-		width: 14em;
-		text-align: center;
-	}
-	calendar .full {
-		color: var(--button-color);
-		background-color: var(--button-bg);
-	}
-	calendar span { font-weight: bold; }
-	calendar span:nth-child(1) { grid-column: 1/6; }
-	calendar span:nth-child(2) { grid-column: 6/8; }
 	day {
-		display: block;
-		width: 14em;
+		float: right;
+		clear: none;
 	}
 </style></head><body>
-	<calendar>
-		<span></span><span></span>
-		<b>l</b><b>m</b><b>m</b><b>j</b><b>v</b><b>s</b><b>d</b>
-	</calendar>
 </body><script type='text/javascript'>
 const fileCalendar = 'calendrier.tsv';
 var eventList = fromTsv (fileCalendar);
