--- a/calendrier.html
+++ b/calendrier.html
@@ -15,6 +15,7 @@
 </style></head><body>
 	<p>coucou</p>
 	<a href='https://html.spec.whatwg.org/multipage/custom-elements.html#valid-custom-element-name'>les noms de tag</a>
-	<cal-month month='mai' year='2022'></cal-month>
+	<cal-month month='mai' year='2022'><p>coucou</p></cal-month>
+	<cal-month month='juillet' year='2021'>doudou</cal-month>
 </body><script type='text/javascript'>
 </script></html>
