--- a/calendrier/calendrier.html
+++ b/calendrier/calendrier.html
@@ -5,10 +5,8 @@
 	<script type='text/javascript' src='../site-dp/library-js/text.js'></script>
 	<script type='text/javascript' src='../site-dp/library-js/list.js'></script>
 	<script type='text/javascript' src='../site-dp/library-js/file.js'></script>
-<!--
--->
 	<script type='text/javascript' src='../site-dp/library-js/tag.js'></script>
-	<script type='text/javascript' src='cal-month.js'></script>
+	<script type='text/javascript' src='calendar.js'></script>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css'/>
 <style type='text/css'>
